--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -23,7 +23,7 @@ RUN wget --quiet https://github.com/jwilder/docker-gen/releases/download/$DOCKER
 
 COPY network_internal.conf /etc/nginx/
 
-COPY . /app/
+COPY app /app/
 WORKDIR /app/
 
 ENV DOCKER_HOST unix:///tmp/docker.sock
@@ -32,3 +32,7 @@ VOLUME ["/etc/nginx/certs", "/etc/nginx/dhparam"]
 
 ENTRYPOINT ["/app/docker-entrypoint.sh"]
 CMD ["forego", "start", "-r"]
+
+# Enable https passthrough configuration using streams
+RUN sed -E -i '/^http \{/i\stream {\n    include /etc/nginx/nginx-stream.conf;\n}\n\n' /etc/nginx/nginx.conf && \
+    touch /etc/nginx/nginx-stream.conf
